--- a/cloud/views/index.ejs
+++ b/cloud/views/index.ejs
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 
-	<!--<%= include GoogleAnalytics %>-->
 </head>
 <body>
 	<header class="header hidden-xs">
@@ -145,6 +144,6 @@
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/CSSPlugin.min.js"></script>
 	<!--<script src="js/pace.min.js"></script>-->
-	<script src="js/index.js"></script>
+	<!--<script src="js/index.js"></script>-->
 </body>
 </html>
