--- a/cloud/views/index.ejs
+++ b/cloud/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Act Fest Registration 2015</title>
+	<title>Act Fest 2015 | 60s 60acts Let's Go Back To The 60s</title>
 	<link rel="shortcut icon" href="favicon.ico" />
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-	<header class="header hidden-xs">
+	<!--<header class="header hidden-xs">
 		<div class="container-fluid">
 			<div class="row" style="margin: 10px 2% 10px 2%;">
 					<a class="home-logo pointer"><img class="img-responsive" src="imgs/header_logo.png" width="145" height="60"></a>
@@ -21,7 +21,7 @@
 					</ul>
 			</div>
 		</div>
-	</header>
+	</header>-->
 
 	<header class="header-sm-xs hidden-sm hidden-md hidden-lg">
 		<div class="container-fluid" style="padding:0; height: 60px;">
@@ -83,10 +83,10 @@
 				<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-center content-text">
 					<form class="">
 						<div class="form-group">
-							<label for="nationalID" class="control-label">รหัสประจำตัวประชาชน หรือรหัส Passport</label>
+							<label for="nationalID" class="control-label">รหัสประจำตัวนิสิต (Student ID)</label>
 							<input type="text" class="form-control nationalid-input" id="nationalID" placeholder="">
 						</div>
-						<button id='recheck_btn' type='button' class="btn btn-confirm" autocomplete="off">ตรวจสอบ</button>
+						<button id='recheck_btn' type='button' class="btn btn-confirm" autocomplete="off">ยืนยัน</button>
 					</form>
 				</div>
 			</div>
@@ -106,33 +106,6 @@
 					<p class="content-text">
 						หากไม่พบข้อมูลหรือข้อมูลไม่ถูกต้อง กรุณาติดต่อทีมผู้ดำเนินงานผ่านทาง<a href="https://www.facebook.com/sgcu.obj" title="Facebook Fanpage" target="_blank">เฟซบุ๊กแฟนเพจ</a >หรือผ่านทาง<a href="https://www.facebook.com/chulafreshmen?fref=ts" title="CU for Freshmen" target="_blank">แฟนเพจรับน้องก้าวใหม่</a>
 					</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="baanlist-section offset" id="baanlist_section" style="background: rgba(255, 255, 255, 0.2); z-index: 3; padding-bottom: 35px;">
-		<div class="container-fluid">
-			<div class="row text-center" style="margin: 30px 0 0 0;">
-				<span style="font-family: 'fontello'; font-size: 50px; line-height: 50px; color: #f15f97;">&#xe804;</span>
-			</div>
-			<div class="row" style="margin: 15px 0 0 0;">
-				<div class="col-md-12 text-center" style="padding: 0 0 0 0;" style="font-size: 24px; line-height: 24px; color: #f15f97;">
-					<span class="topic-text">รายชื่อบ้าน '58</span>
-				</div>
-			</div>
-			<div class="section-header-seperator"></div>
-			<div class="row">
-				<div class="col-md-12 text-center" style="padding: 0 5% 0 5%; font-size: 24px; line-height: 24px; color: #f15f97;">
-					<p class="content-text" style="text-align: center; margin-bottom: 25px;">
-						สามารถดูรายชื่อบ้านได้ที่นี่
-					</p>
-					<a id="baanlist_show_button" class="baan-button pointer" style="border: 2px solid #f15f97; padding: 4px 20px 4px 20px;">แสดงรายชื่อบ้าน</a>
-				</div>
-			</div>
-			<div class="row center-block" id="baanlist_placeholder" style="display:none;">
-				<div class="col-md-10 col-md-offset-1" style="padding: 0 5% 40px 5%;" id="baan_data">
-					<p class="loading-text text-center"><img src="imgs/loading-bubbles.svg" alt=""/> กำลังโหลดข้อมูลบ้าน...</p>
 				</div>
 			</div>
 		</div>
