Update header text

--- a/cloud/views/index.ejs
+++ b/cloud/views/index.ejs
@@ -11,19 +11,7 @@
 
 </head>
 <body>
-	<!--<header class="header hidden-xs">
-		<div class="container-fluid">
-			<div class="row" style="margin: 10px 2% 10px 2%;">
-					<a class="home-logo pointer"><img class="img-responsive" src="imgs/header_logo.png" width="145" height="60"></a>
-					<ul>
-						<li><a class="m-1">ดูผลการเลือกบ้าน</a></li>
-						<li><a class="m-2">รายชื่อบ้าน</a></li>
-					</ul>
-			</div>
-		</div>
-	</header>-->
-
-	<header class="header-sm-xs hidden-sm hidden-md hidden-lg">
+	<!--<header class="header-sm-xs hidden-sm hidden-md hidden-lg">
 		<div class="container-fluid" style="padding:0; height: 60px;">
 			<nav class="navbar navbar-default navbar-static-top" style="padding: 0 0 0 0; border: 0px; border-bottom: 1px solid #CCC; background: rgba(255, 255, 255, 0.95);">
 				<div class="container-fluid">
@@ -39,16 +27,16 @@
 
 					<div class="collapse navbar-collapse" id="navbar-collapse-1"	style="border: 0px;">
 						<ul class="nav navbar-nav navbar-right text-center" style="font-size: 18px;">
-							<li><a data-toggle="collapse" data-target="#navbar-collapse-1" href="#result_section" class="m-1">ดูผลการเลือกบ้าน</a></li>
+							<li><a data-toggle="collapse" data-target="#navbar-collapse-1" href="#result_section" class="m-1">ระบบลงทะเบียนเข้าร่วมงาน</a></li>
 							<li><a data-toggle="collapse" data-target="#navbar-collapse-1" href="#baanlist_section" class="m-2">รายชื่อบ้าน</a></li>
 						</ul>
 					</div>
 				</div>
 			</nav>
 		</div>
-	</header>
+	</header>-->
 
-	<section class="main-section" style="background: rgba(255, 255, 255, 0.3); z-index: 6;">
+	<!--<section class="main-section" style="background: rgba(255, 255, 255, 0.3); z-index: 6;">
 		<div class="container-fluid">
 			<div class="row" style="margin: 25px 0 0 0;">
 				<img class="img-responsive center-block" src="imgs/cu_together_logo.png" width="528" height="299">
@@ -58,7 +46,7 @@
 				<div class="arrow-up center-block"></div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 
 	<section class="result-section offset" id="result_section" style="z-index: 2;">
 		<div class="container-fluid" style="background: #ffffff;">
@@ -67,7 +55,7 @@
 			</div>
 			<div class="row" style="margin: 15px 0 0 0;">
 				<div class="col-md-12 text-center" style="padding: 0 0 0 0;" style="font-size: 24px; line-height: 24px; color: #f15f97;">
-					<span class="topic-text">ดูผลการเลือกบ้าน</span>
+					<span class="topic-text">ระบบลงทะเบียนเข้าร่วมงาน</span>
 				</div>
 			</div>
 			<div class="section-header-seperator"></div>
