--- a/cloud/views/index.ejs
+++ b/cloud/views/index.ejs
@@ -51,21 +51,22 @@
 	<section class="result-section offset" id="result_section" style="z-index: 2;">
 		<div class="container-fluid" style="background: #ffffff;">
 			<div class="row text-center" style="margin: 30px 0 0 0;">
-				<span style="font-family: 'fontello'; font-size: 50px; line-height: 50px; color: #f15f97;">&#xe804;</span>
+				<img class="img-responsive center-block" src="imgs/actfest_logo.png" width="211" height="211">
+				<!--<span style="font-family: 'fontello'; font-size: 50px; line-height: 50px; color: #f15f97;">&#xe804;</span>-->
 			</div>
 			<div class="row" style="margin: 15px 0 0 0;">
-				<div class="col-md-12 text-center" style="padding: 0 0 0 0;" style="font-size: 24px; line-height: 24px; color: #f15f97;">
+				<div class="col-md-12 text-center" style="padding: 0 0 0 0;" style="font-size: 24px; line-height: 24px; color: #ea4434;">
 					<span class="topic-text">ระบบลงทะเบียนเข้าร่วมงาน</span>
 				</div>
 			</div>
 			<div class="section-header-seperator"></div>
-			<div class="row" style="margin: 0 0 20px 0;">
+			<!--<div class="row" style="margin: 0 0 20px 0;">
 				<div class="col-md-8 col-md-offset-2 text-center" style="padding: 0 5% 0 5%;">
 					<p class="content-text">
 						ขณะนี้ ผลการเลือกบ้านได้ประกาศแล้ว น้องๆ สามารถเช็คข้อมูลได้ด้านล่างนี้ หรือสามารถดูรายชื่อทั้งหมดได้<a href="javascript:alert('รอลิงค์ .pdf');" class="รายชื่อบ้านรับน้อง">ที่นี่</a>
 					</p>
 				</div>
-			</div>
+			</div>-->
 
 			<div class="row" style="margin-top: 40px; margin-bottom: 50px;" id="recheck_form">
 				<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-center content-text">
