--- a/cloud/views/index.ejs
+++ b/cloud/views/index.ejs
@@ -11,48 +11,10 @@
 
 </head>
 <body>
-	<!--<header class="header-sm-xs hidden-sm hidden-md hidden-lg">
-		<div class="container-fluid" style="padding:0; height: 60px;">
-			<nav class="navbar navbar-default navbar-static-top" style="padding: 0 0 0 0; border: 0px; border-bottom: 1px solid #CCC; background: rgba(255, 255, 255, 0.95);">
-				<div class="container-fluid">
-					<div class="navbar-header"	style="padding: 10px 0 10px 2%; border: 0px;">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" style="width: 50px; height: 40px; padding:2px 0 0 14px; margin: 0 1.5% 0 0;">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<a class="home-logo pointer" href="#"><img class="img-responsive" src="imgs/header_logo_sm_xs.png" width="97" height="40"></a>
-					</div>
-
-					<div class="collapse navbar-collapse" id="navbar-collapse-1"	style="border: 0px;">
-						<ul class="nav navbar-nav navbar-right text-center" style="font-size: 18px;">
-							<li><a data-toggle="collapse" data-target="#navbar-collapse-1" href="#result_section" class="m-1">ระบบลงทะเบียนเข้าร่วมงาน</a></li>
-							<li><a data-toggle="collapse" data-target="#navbar-collapse-1" href="#baanlist_section" class="m-2">รายชื่อบ้าน</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-		</div>
-	</header>-->
-
-	<!--<section class="main-section" style="background: rgba(255, 255, 255, 0.3); z-index: 6;">
-		<div class="container-fluid">
-			<div class="row" style="margin: 25px 0 0 0;">
-				<img class="img-responsive center-block" src="imgs/cu_together_logo.png" width="528" height="299">
-			</div>
-			<br>
-			<div class="row" style="margin: 0;">
-				<div class="arrow-up center-block"></div>
-			</div>
-		</div>
-	</section>-->
-
 	<section class="result-section offset" id="result_section" style="z-index: 2;">
 		<div class="container-fluid" style="background: #ffffff;">
 			<div class="row text-center" style="margin: 30px 0 0 0;">
 				<img class="img-responsive center-block" src="imgs/actfest_logo.png" width="211" height="211">
-				<!--<span style="font-family: 'fontello'; font-size: 50px; line-height: 50px; color: #f15f97;">&#xe804;</span>-->
 			</div>
 			<div class="row" style="margin: 15px 0 0 0;">
 				<div class="col-md-12 text-center" style="padding: 0 0 0 0;" style="font-size: 24px; line-height: 24px; color: #ea4434;">
@@ -60,20 +22,13 @@
 				</div>
 			</div>
 			<div class="section-header-seperator"></div>
-			<!--<div class="row" style="margin: 0 0 20px 0;">
-				<div class="col-md-8 col-md-offset-2 text-center" style="padding: 0 5% 0 5%;">
-					<p class="content-text">
-						ขณะนี้ ผลการเลือกบ้านได้ประกาศแล้ว น้องๆ สามารถเช็คข้อมูลได้ด้านล่างนี้ หรือสามารถดูรายชื่อทั้งหมดได้<a href="javascript:alert('รอลิงค์ .pdf');" class="รายชื่อบ้านรับน้อง">ที่นี่</a>
-					</p>
-				</div>
-			</div>-->
 
-			<div class="row" style="margin-top: 40px; margin-bottom: 50px;" id="recheck_form">
+			<div class="row" style="margin-top: 50px; margin-bottom: 50px;" id="recheck_form">
 				<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-center content-text">
 					<form class="">
 						<div class="form-group">
-							<label for="nationalID" class="control-label">รหัสประจำตัวนิสิต (Student ID)</label>
-							<input type="text" class="form-control nationalid-input" id="nationalID" placeholder="">
+							<label for="studentID" class="control-label">รหัสประจำตัวนิสิต (Student ID)</label>
+							<input type="text" class="form-control Studentid-input" id="studentID" placeholder="">
 						</div>
 						<button id='recheck_btn' type='button' class="btn btn-confirm" autocomplete="off">ยืนยัน</button>
 					</form>
@@ -88,24 +43,27 @@
 				</div>
 			</div>
 
-			<div class="row" style="margin-top: 50px; margin-bottom: 50px;">
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="container-fluid">
+			<div class="row" style="margin: 15px 0 13px 0;">
 				<div class="col-md-10 col-md-offset-1 text-center" style="padding: 0 5% 0 5%;">
 					<p class="content-text">
-					</p>
-					<p class="content-text">
-						หากไม่พบข้อมูลหรือข้อมูลไม่ถูกต้อง กรุณาติดต่อทีมผู้ดำเนินงานผ่านทาง<a href="https://www.facebook.com/sgcu.obj" title="Facebook Fanpage" target="_blank">เฟซบุ๊กแฟนเพจ</a >หรือผ่านทาง<a href="https://www.facebook.com/chulafreshmen?fref=ts" title="CU for Freshmen" target="_blank">แฟนเพจรับน้องก้าวใหม่</a>
+						<img class="img-responsive center-block" src="imgs/sponcer.png" width="544" height="47">
 					</p>
 				</div>
 			</div>
 		</div>
-	</section>
+	</footer>
 
 	<!-- SCRIPT SECTION -->
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/CSSPlugin.min.js"></script>
-	<!--<script src="js/pace.min.js"></script>-->
-	<!--<script src="js/index.js"></script>-->
+	<script src="js/pace.min.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
