--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,12 +3,12 @@
 
 /*--PACE-LOADING--*/
 .pace .pace-progress {
-	background: #f15f97;
+	background: #ea4434;
 	position: fixed;
 	z-index: 10000;
 	top: 0%;
 	left: 0%;
-	height: 1px;
+	height: 2px;
 
 	-webkit-transition: width 1s;
 	-moz-transition: width 1s;
@@ -301,7 +301,7 @@ a.baan-button, a.baan-button:visited, a.baan-button:active, a.baan-button:hover 
 	font-family: 'thaisans_neuebold';
 	font-size: 40px;
 	line-height: 32px;
-	color: #f15f97;
+	color: #ea4434;
 }
 
 .content-text {
@@ -359,8 +359,8 @@ a.baan-button, a.baan-button:visited, a.baan-button:active, a.baan-button:hover 
 	width: 80px;
 	left: 50%;
 	margin: 20px 0 20px -40px;
-	height: 1px;
-	background: #414141;
+	height: 3px;
+	background: #295264;
 }
 
 .nationalid-input {
@@ -395,8 +395,8 @@ a.baan-button, a.baan-button:visited, a.baan-button:active, a.baan-button:hover 
 	color: #FFF;
 	font-size: 24px;
 	height: 34px;
-	background: rgba(241, 95, 151, 1);
-	border-color: rgba(241, 95, 151, 1);
+	background: rgba(234, 68, 52, 1);
+	border-color: rgba(234, 68, 52, 1);
 	padding: 5px 15px 5px 15px;
 	width: 100%;
 	height: 40px;
@@ -410,12 +410,12 @@ a.baan-button, a.baan-button:visited, a.baan-button:active, a.baan-button:hover 
 
 .btn-confirm:focus, .btn-confirm:hover, .btn-confirm:active:focus {
 	color: #FFF;
-	background: rgba(212, 41, 106, 1);
+	background: rgba(182, 45, 30, 1);
 	-webkit-appearance: none;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
-	border: 1px solid rgba(212, 41, 106, 1);
+	border: 1px solid rgba(182, 45, 30, 1);
 }
 
 .error-code {
