Remove junk files

--- a/cloud/views/index.ejs
+++ b/cloud/views/index.ejs
@@ -28,7 +28,7 @@
 					<form class="">
 						<div class="form-group">
 							<label for="studentID" class="control-label">รหัสประจำตัวนิสิต (Student ID)</label>
-							<input type="text" class="form-control Studentid-input" id="studentID" placeholder="">
+							<input type="text" class="form-control studentid-input" id="studentID" placeholder="">
 						</div>
 						<button id='recheck_btn' type='button' class="btn btn-confirm" autocomplete="off">ยืนยัน</button>
 					</form>
