--- a/public/css/index.css
+++ b/public/css/index.css
@@ -363,7 +363,7 @@ a.baan-button, a.baan-button:visited, a.baan-button:active, a.baan-button:hover 
 	background: #295264;
 }
 
-.nationalid-input {
+.studentid-input {
 	font-size: 30px;
 	height: 50px;
 	text-align: center;
